[gd_scene load_steps=10 format=3 uid="uid://dmkdehmf8uidb"]

[ext_resource type="TileSet" uid="uid://cvb8htd1db38o" path="res://assets/Tileset.tres" id="1_r7827"]
[ext_resource type="PackedScene" uid="uid://cw7tosxaqtidq" path="res://entities/StartZone.tscn" id="2_kq1xc"]
[ext_resource type="PackedScene" uid="uid://cqiw02w5r4oyi" path="res://entities/FinishZone.tscn" id="3_588w7"]
[ext_resource type="PackedScene" uid="uid://cslo232luybk" path="res://entities/Camera.tscn" id="4_q81i7"]
[ext_resource type="PackedScene" uid="uid://dhfus8oroousn" path="res://entities/Player.tscn" id="5_fkiyw"]
[ext_resource type="Script" path="res://entities/HUD.gd" id="6_4kgnc"]
[ext_resource type="PackedScene" uid="uid://b80rljogo2nyj" path="res://gui/DiedMenu.tscn" id="7_nl2bs"]
[ext_resource type="PackedScene" uid="uid://cvqtkrgdyf8e4" path="res://gui/FinishedMenu.tscn" id="8_pdgei"]
[ext_resource type="Script" path="res://gui/FinishedMenu.gd" id="9_yjko5"]

[node name="Level0" type="Node2D"]

[node name="Level" type="Node2D" parent="."]

[node name="BackgroundTiles" type="TileMap" parent="Level"]
position = Vector2(-1, 0)
tile_set = ExtResource("1_r7827")
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(65537, 262147, 1, 2, 196611, 1, 65538, 327683, 1, 3, 131075, 1, 65539, 262147, 1, 4, 196611, 1, 65540, 327683, 1, 131073, 131075, 1, 196609, 262147, 1, 131074, 196611, 1, 196610, 327683, 1, 131075, 131075, 1, 196611, 262147, 1, 131076, 196611, 1, 196612, 327683, 1, 5, 131075, 1, 65541, 262147, 1, 6, 196611, 1, 65542, 327683, 1, 7, 131075, 1, 65543, 262147, 1, 8, 196611, 1, 65544, 327683, 1, 131077, 131075, 1, 196613, 262147, 1, 131078, 196611, 1, 196614, 327683, 1, 131079, 131075, 1, 196615, 262147, 1, 131080, 196611, 1, 196616, 327683, 1, 9, 131075, 1, 65545, 262147, 1, 10, 196611, 1, 65546, 327683, 1, 131081, 131075, 1, 196617, 262147, 1, 131082, 196611, 1, 196618, 327683, 1, 262153, 131075, 1, 327689, 262147, 1, 262154, 196611, 1, 327690, 327683, 1, 262151, 131075, 1, 327687, 262147, 1, 262152, 196611, 1, 327688, 327683, 1, 262149, 131075, 1, 327685, 262147, 1, 262150, 196611, 1, 262147, 131075, 1, 327683, 262147, 1, 262148, 196611, 1, 327684, 327683, 1, 262145, 131075, 1, 327681, 262147, 1, 262146, 196611, 1, 327682, 327683, 1, 1, 131075, 1, 327686, 327683, 1, 393217, 131075, 1, 458753, 262147, 1, 524289, 131075, 1, 589825, 262147, 1, 655361, 131075, 1, 720897, 262147, 1, 393218, 196611, 1, 458754, 327683, 1, 524290, 196611, 1, 589826, 327683, 1, 655362, 196611, 1, 720898, 327683, 1, 393219, 131075, 1, 458755, 262147, 1, 524291, 131075, 1, 589827, 262147, 1, 655363, 131075, 1, 720899, 262147, 1, 393220, 196611, 1, 458756, 327683, 1, 524292, 196611, 1, 589828, 327683, 1, 655364, 196611, 1, 720900, 327683, 1, 393221, 131075, 1, 458757, 262147, 1, 524293, 131075, 1, 589829, 262147, 1, 655365, 131075, 1, 720901, 262147, 1, 393222, 196611, 1, 458758, 327683, 1, 524294, 196611, 1, 589830, 327683, 1, 655366, 196611, 1, 720902, 327683, 1, 393224, 196611, 1, 458760, 327683, 1, 524296, 196611, 1, 589832, 327683, 1, 655368, 196611, 1, 720904, 327683, 1, 393225, 131075, 1, 458761, 262147, 1, 524297, 131075, 1, 589833, 262147, 1, 655369, 131075, 1, 720905, 262147, 1, 393226, 196611, 1, 458762, 327683, 1, 524298, 196611, 1, 589834, 327683, 1, 655370, 196611, 1, 720906, 327683, 1, 393227, 131075, 1, 458763, 262147, 1, 524299, 131075, 1, 589835, 262147, 1, 655371, 131075, 1, 720907, 262147, 1, 393228, 196611, 1, 458764, 327683, 1, 524300, 196611, 1, 589836, 327683, 1, 655372, 196611, 1, 720908, 327683, 1, 393229, 131075, 1, 458765, 262147, 1, 524301, 131075, 1, 589837, 262147, 1, 655373, 131075, 1, 720909, 262147, 1, 393223, 131075, 1, 458759, 262147, 1, 524295, 131075, 1, 589831, 262147, 1, 655367, 131075, 1, 720903, 262147, 1, 11, 131075, 1, 65547, 262147, 1, 131083, 131075, 1, 196619, 262147, 1, 262155, 131075, 1, 327691, 262147, 1, 12, 196611, 1, 65548, 327683, 1, 131084, 196611, 1, 196620, 327683, 1, 262156, 196611, 1, 327692, 327683, 1, -393209, 131075, 1, -327673, 262147, 1, -262137, 131075, 1, -196601, 262147, 1, -131065, 131075, 1, -65529, 262147, 1, -393208, 196611, 1, -327672, 327683, 1, -262136, 196611, 1, -196600, 327683, 1, -131064, 196611, 1, -65528, 327683, 1, -393207, 131075, 1, -327671, 262147, 1, -262135, 131075, 1, -196599, 262147, 1, -131063, 131075, 1, -65527, 262147, 1, -393206, 196611, 1, -327670, 327683, 1, -262134, 196611, 1, -196598, 327683, 1, -131062, 196611, 1, -65526, 327683, 1, -393205, 131075, 1, -327669, 262147, 1, -262133, 131075, 1, -196597, 262147, 1, -131061, 131075, 1, -65525, 262147, 1, -393204, 196611, 1, -327668, 327683, 1, -262132, 196611, 1, -196596, 327683, 1, -131060, 196611, 1, -65524, 327683, 1, -393215, 131075, 1, -327679, 262147, 1, -262143, 131075, 1, -196607, 262147, 1, -131071, 131075, 1, -65535, 262147, 1, -393214, 196611, 1, -327678, 327683, 1, -262142, 196611, 1, -196606, 327683, 1, -131070, 196611, 1, -65534, 327683, 1, -393213, 131075, 1, -327677, 262147, 1, -262141, 131075, 1, -196605, 262147, 1, -131069, 131075, 1, -65533, 262147, 1, -393212, 196611, 1, -327676, 327683, 1, -262140, 196611, 1, -196604, 327683, 1, -131068, 196611, 1, -65532, 327683, 1, -393211, 131075, 1, -327675, 262147, 1, -262139, 131075, 1, -196603, 262147, 1, -131067, 131075, 1, -65531, 262147, 1, -393210, 196611, 1, -327674, 327683, 1, -262138, 196611, 1, -196602, 327683, 1, -131066, 196611, 1, -65530, 327683, 1, -327685, 131075, 1, -262149, 262147, 1, -196613, 131075, 1, -131077, 262147, 1, -65541, 131075, 1, -5, 262147, 1, -327684, 196611, 1, -262148, 327683, 1, -196612, 196611, 1, -131076, 327683, 1, -65540, 196611, 1, -4, 327683, 1, -327683, 131075, 1, -262147, 262147, 1, -196611, 131075, 1, -131075, 262147, 1, -65539, 131075, 1, -3, 262147, 1, -327682, 196611, 1, -262146, 327683, 1, -196610, 196611, 1, -131074, 327683, 1, -65538, 196611, 1, -2, 327683, 1, -327681, 131075, 1, -262145, 262147, 1, -196609, 131075, 1, -131073, 262147, 1, -65537, 131075, 1, -1, 262147, 1, -393216, 196611, 1, -327680, 327683, 1, -262144, 196611, 1, -196608, 327683, 1, -131072, 196611, 1, -65536, 327683, 1, 65531, 131075, 1, 131067, 262147, 1, 196603, 131075, 1, 262139, 262147, 1, 327675, 131075, 1, 393211, 262147, 1, 65532, 196611, 1, 131068, 327683, 1, 196604, 196611, 1, 262140, 327683, 1, 327676, 196611, 1, 393212, 327683, 1, 65533, 131075, 1, 131069, 262147, 1, 196605, 131075, 1, 262141, 262147, 1, 327677, 131075, 1, 393213, 262147, 1, 65534, 196611, 1, 131070, 327683, 1, 196606, 196611, 1, 262142, 327683, 1, 327678, 196611, 1, 393214, 327683, 1, 65535, 131075, 1, 131071, 262147, 1, 196607, 131075, 1, 262143, 262147, 1, 327679, 131075, 1, 393215, 262147, 1, 0, 196611, 1, 65536, 327683, 1, 131072, 196611, 1, 196608, 327683, 1, 262144, 196611, 1, 327680, 327683, 1, 458747, 131075, 1, 524283, 262147, 1, 589819, 131075, 1, 655355, 262147, 1, 720891, 131075, 1, 786427, 262147, 1, 458748, 196611, 1, 524284, 327683, 1, 589820, 196611, 1, 655356, 327683, 1, 720892, 196611, 1, 786428, 327683, 1, 458749, 131075, 1, 524285, 262147, 1, 589821, 131075, 1, 655357, 262147, 1, 720893, 131075, 1, 786429, 262147, 1, 458750, 196611, 1, 524286, 327683, 1, 589822, 196611, 1, 655358, 327683, 1, 720894, 196611, 1, 786430, 327683, 1, 458751, 131075, 1, 524287, 262147, 1, 589823, 131075, 1, 655359, 262147, 1, 720895, 131075, 1, 786431, 262147, 1, 393216, 196611, 1, 458752, 327683, 1, 524288, 196611, 1, 589824, 327683, 1, 655360, 196611, 1, 720896, 327683, 1, 393230, 196611, 1, 458766, 327683, 1, 524302, 196611, 1, 589838, 327683, 1, 655374, 196611, 1, 720910, 327683, 1, 393231, 131075, 1, 458767, 262147, 1, 524303, 131075, 1, 589839, 262147, 1, 655375, 131075, 1, 720911, 262147, 1, 393232, 196611, 1, 458768, 327683, 1, 524304, 196611, 1, 589840, 327683, 1, 655376, 196611, 1, 720912, 327683, 1, 393233, 131075, 1, 458769, 262147, 1, 524305, 131075, 1, 589841, 262147, 1, 655377, 131075, 1, 720913, 262147, 1, 393234, 196611, 1, 458770, 327683, 1, 524306, 196611, 1, 589842, 327683, 1, 655378, 196611, 1, 720914, 327683, 1, 13, 131075, 1, 65549, 262147, 1, 131085, 131075, 1, 196621, 262147, 1, 262157, 131075, 1, 327693, 262147, 1, 14, 196611, 1, 65550, 327683, 1, 131086, 196611, 1, 196622, 327683, 1, 262158, 196611, 1, 327694, 327683, 1, 15, 131075, 1, 65551, 262147, 1, 131087, 131075, 1, 196623, 262147, 1, 262159, 131075, 1, 327695, 262147, 1, 16, 196611, 1, 65552, 327683, 1, 131088, 196611, 1, 196624, 327683, 1, 262160, 196611, 1, 327696, 327683, 1, 17, 131075, 1, 65553, 262147, 1, 131089, 131075, 1, 196625, 262147, 1, 262161, 131075, 1, 327697, 262147, 1, 18, 196611, 1, 65554, 327683, 1, 131090, 196611, 1, 196626, 327683, 1, 262162, 196611, 1, 327698, 327683, 1, -393203, 131075, 1, -327667, 262147, 1, -262131, 131075, 1, -196595, 262147, 1, -131059, 131075, 1, -65523, 262147, 1, -393202, 196611, 1, -327666, 327683, 1, -262130, 196611, 1, -196594, 327683, 1, -131058, 196611, 1, -65522, 327683, 1, -393201, 131075, 1, -327665, 262147, 1, -262129, 131075, 1, -196593, 262147, 1, -131057, 131075, 1, -65521, 262147, 1, -393200, 196611, 1, -327664, 327683, 1, -262128, 196611, 1, -196592, 327683, 1, -131056, 196611, 1, -65520, 327683, 1, -393199, 131075, 1, -327663, 262147, 1, -262127, 131075, 1, -196591, 262147, 1, -131055, 131075, 1, -65519, 262147, 1, -393198, 196611, 1, -327662, 327683, 1, -262126, 196611, 1, -196590, 327683, 1, -131054, 196611, 1, -65518, 327683, 1, 786445, 131075, 1, 851981, 262147, 1, 917517, 131075, 1, 983053, 262147, 1, 1048589, 131075, 1, 1114125, 262147, 1, 786446, 196611, 1, 851982, 327683, 1, 917518, 196611, 1, 983054, 327683, 1, 1048590, 196611, 1, 1114126, 327683, 1, 786447, 131075, 1, 851983, 262147, 1, 917519, 131075, 1, 983055, 262147, 1, 1048591, 131075, 1, 1114127, 262147, 1, 786448, 196611, 1, 851984, 327683, 1, 917520, 196611, 1, 983056, 327683, 1, 1048592, 196611, 1, 1114128, 327683, 1, 786449, 131075, 1, 851985, 262147, 1, 917521, 131075, 1, 983057, 262147, 1, 1048593, 131075, 1, 1114129, 262147, 1, 786450, 196611, 1, 851986, 327683, 1, 917522, 196611, 1, 983058, 327683, 1, 1048594, 196611, 1, 1114130, 327683, 1, 786439, 131075, 1, 851975, 262147, 1, 917511, 131075, 1, 983047, 262147, 1, 1048583, 131075, 1, 1114119, 262147, 1, 786440, 196611, 1, 851976, 327683, 1, 917512, 196611, 1, 983048, 327683, 1, 1048584, 196611, 1, 1114120, 327683, 1, 786441, 131075, 1, 851977, 262147, 1, 917513, 131075, 1, 983049, 262147, 1, 1048585, 131075, 1, 1114121, 262147, 1, 786442, 196611, 1, 851978, 327683, 1, 917514, 196611, 1, 983050, 327683, 1, 1048586, 196611, 1, 1114122, 327683, 1, 786443, 131075, 1, 851979, 262147, 1, 917515, 131075, 1, 983051, 262147, 1, 1048587, 131075, 1, 1114123, 262147, 1, 786444, 196611, 1, 851980, 327683, 1, 917516, 196611, 1, 983052, 327683, 1, 1048588, 196611, 1, 1114124, 327683, 1, 786433, 131075, 1, 851969, 262147, 1, 917505, 131075, 1, 983041, 262147, 1, 1048577, 131075, 1, 1114113, 262147, 1, 786434, 196611, 1, 851970, 327683, 1, 917506, 196611, 1, 983042, 327683, 1, 1048578, 196611, 1, 1114114, 327683, 1, 786435, 131075, 1, 851971, 262147, 1, 917507, 131075, 1, 983043, 262147, 1, 1048579, 131075, 1, 1114115, 262147, 1, 786436, 196611, 1, 851972, 327683, 1, 917508, 196611, 1, 983044, 327683, 1, 1048580, 196611, 1, 1114116, 327683, 1, 786437, 131075, 1, 851973, 262147, 1, 917509, 131075, 1, 983045, 262147, 1, 1048581, 131075, 1, 1114117, 262147, 1, 786438, 196611, 1, 851974, 327683, 1, 917510, 196611, 1, 983046, 327683, 1, 1048582, 196611, 1, 1114118, 327683, 1, 851963, 131075, 1, 917499, 262147, 1, 983035, 131075, 1, 1048571, 262147, 1, 1114107, 131075, 1, 1179643, 262147, 1, 851964, 196611, 1, 917500, 327683, 1, 983036, 196611, 1, 1048572, 327683, 1, 1114108, 196611, 1, 1179644, 327683, 1, 851965, 131075, 1, 917501, 262147, 1, 983037, 131075, 1, 1048573, 262147, 1, 1114109, 131075, 1, 1179645, 262147, 1, 851966, 196611, 1, 917502, 327683, 1, 983038, 196611, 1, 1048574, 327683, 1, 1114110, 196611, 1, 1179646, 327683, 1, 851967, 131075, 1, 917503, 262147, 1, 983039, 131075, 1, 1048575, 262147, 1, 1114111, 131075, 1, 1179647, 262147, 1, 786432, 196611, 1, 851968, 327683, 1, 917504, 196611, 1, 983040, 327683, 1, 1048576, 196611, 1, 1114112, 327683, 1, -393197, 131075, 1, -327661, 262147, 1, -262125, 131075, 1, -196589, 262147, 1, -131053, 131075, 1, -65517, 262147, 1, 19, 131075, 1, 65555, 262147, 1, 131091, 131075, 1, 196627, 262147, 1, 262163, 131075, 1, 327699, 262147, 1, 393235, 131075, 1, 458771, 262147, 1, 524307, 131075, 1, 589843, 262147, 1, 655379, 131075, 1, 720915, 262147, 1, 786451, 131075, 1, 851987, 262147, 1, 917523, 131075, 1, 983059, 262147, 1, 1048595, 131075, 1, 1114131, 262147, 1, -393196, 196611, 1, -327660, 327683, 1, -262124, 196611, 1, -196588, 327683, 1, -131052, 196611, 1, -65516, 327683, 1, 20, 196611, 1, 65556, 327683, 1, 131092, 196611, 1, 196628, 327683, 1, 262164, 196611, 1, 327700, 327683, 1, 393236, 196611, 1, 458772, 327683, 1, 524308, 196611, 1, 589844, 327683, 1, 655380, 196611, 1, 720916, 327683, 1, 786452, 196611, 1, 851988, 327683, 1, 917524, 196611, 1, 983060, 327683, 1, 1048596, 196611, 1, 1114132, 327683, 1, -393195, 131075, 1, -327659, 262147, 1, -262123, 131075, 1, -196587, 262147, 1, -131051, 131075, 1, -65515, 262147, 1, 21, 131075, 1, 65557, 262147, 1, 131093, 131075, 1, 196629, 262147, 1, 262165, 131075, 1, 327701, 262147, 1, 393237, 131075, 1, 458773, 262147, 1, 524309, 131075, 1, 589845, 262147, 1, 655381, 131075, 1, 720917, 262147, 1, 786453, 131075, 1, 851989, 262147, 1, 917525, 131075, 1, 983061, 262147, 1, 1048597, 131075, 1, 1114133, 262147, 1, -393194, 196611, 1, -327658, 327683, 1, -262122, 196611, 1, -196586, 327683, 1, -131050, 196611, 1, -65514, 327683, 1, 22, 196611, 1, 65558, 327683, 1, 131094, 196611, 1, 196630, 327683, 1, 262166, 196611, 1, 327702, 327683, 1, 393238, 196611, 1, 458774, 327683, 1, 524310, 196611, 1, 589846, 327683, 1, 655382, 196611, 1, 720918, 327683, 1, 786454, 196611, 1, 851990, 327683, 1, 917526, 196611, 1, 983062, 327683, 1, 1048598, 196611, 1, 1114134, 327683, 1, -393193, 131075, 1, -327657, 262147, 1, -262121, 131075, 1, -196585, 262147, 1, -131049, 131075, 1, -65513, 262147, 1, 23, 131075, 1, 65559, 262147, 1, 131095, 131075, 1, 196631, 262147, 1, 262167, 131075, 1, 327703, 262147, 1, 393239, 131075, 1, 458775, 262147, 1, 524311, 131075, 1, 589847, 262147, 1, 655383, 131075, 1, 720919, 262147, 1, 786455, 131075, 1, 851991, 262147, 1, 917527, 131075, 1, 983063, 262147, 1, 1048599, 131075, 1, 1114135, 262147, 1, -393192, 196611, 1, -327656, 327683, 1, -262120, 196611, 1, -196584, 327683, 1, -131048, 196611, 1, -65512, 327683, 1, 24, 196611, 1, 65560, 327683, 1, 131096, 196611, 1, 196632, 327683, 1, 262168, 196611, 1, 327704, 327683, 1, 393240, 196611, 1, 458776, 327683, 1, 524312, 196611, 1, 589848, 327683, 1, 655384, 196611, 1, 720920, 327683, 1, 786456, 196611, 1, 851992, 327683, 1, 917528, 196611, 1, 983064, 327683, 1, 1048600, 196611, 1, 1114136, 327683, 1, -393191, 131075, 1, -327655, 262147, 1, -262119, 131075, 1, -196583, 262147, 1, -131047, 131075, 1, -65511, 262147, 1, 25, 131075, 1, 65561, 262147, 1, 131097, 131075, 1, 196633, 262147, 1, 262169, 131075, 1, 327705, 262147, 1, 393241, 131075, 1, 458777, 262147, 1, 524313, 131075, 1, 589849, 262147, 1, 655385, 131075, 1, 720921, 262147, 1, 786457, 131075, 1, 851993, 262147, 1, 917529, 131075, 1, 983065, 262147, 1, 1048601, 131075, 1, 1114137, 262147, 1, -393190, 196611, 1, -327654, 327683, 1, -262118, 196611, 1, -196582, 327683, 1, -131046, 196611, 1, -65510, 327683, 1, 26, 196611, 1, 65562, 327683, 1, 131098, 196611, 1, 196634, 327683, 1, 262170, 196611, 1, 327706, 327683, 1, 393242, 196611, 1, 458778, 327683, 1, 524314, 196611, 1, 589850, 327683, 1, 655386, 196611, 1, 720922, 327683, 1, 786458, 196611, 1, 851994, 327683, 1, 917530, 196611, 1, 983066, 327683, 1, 1048602, 196611, 1, 1114138, 327683, 1, -393189, 131075, 1, -327653, 262147, 1, -262117, 131075, 1, -196581, 262147, 1, -131045, 131075, 1, -65509, 262147, 1, 27, 131075, 1, 65563, 262147, 1, 131099, 131075, 1, 196635, 262147, 1, 262171, 131075, 1, 327707, 262147, 1, 393243, 131075, 1, 458779, 262147, 1, 524315, 131075, 1, 589851, 262147, 1, 655387, 131075, 1, 720923, 262147, 1, 786459, 131075, 1, 851995, 262147, 1, 917531, 131075, 1, 983067, 262147, 1, 1048603, 131075, 1, 1114139, 262147, 1, -393188, 196611, 1, -327652, 327683, 1, -262116, 196611, 1, -196580, 327683, 1, -131044, 196611, 1, -65508, 327683, 1, 28, 196611, 1, 65564, 327683, 1, 131100, 196611, 1, 196636, 327683, 1, 262172, 196611, 1, 327708, 327683, 1, 393244, 196611, 1, 458780, 327683, 1, 524316, 196611, 1, 589852, 327683, 1, 655388, 196611, 1, 720924, 327683, 1, 786460, 196611, 1, 851996, 327683, 1, 917532, 196611, 1, 983068, 327683, 1, 1048604, 196611, 1, 1114140, 327683, 1, -393187, 131075, 1, -327651, 262147, 1, -262115, 131075, 1, -196579, 262147, 1, -131043, 131075, 1, -65507, 262147, 1, 29, 131075, 1, 65565, 262147, 1, 131101, 131075, 1, 196637, 262147, 1, 262173, 131075, 1, 327709, 262147, 1, 393245, 131075, 1, 458781, 262147, 1, 524317, 131075, 1, 589853, 262147, 1, 655389, 131075, 1, 720925, 262147, 1, 786461, 131075, 1, 851997, 262147, 1, 917533, 131075, 1, 983069, 262147, 1, 1048605, 131075, 1, 1114141, 262147, 1, -393186, 196611, 1, -327650, 327683, 1, -262114, 196611, 1, -196578, 327683, 1, -131042, 196611, 1, -65506, 327683, 1, 30, 196611, 1, 65566, 327683, 1, 131102, 196611, 1, 196638, 327683, 1, 262174, 196611, 1, 327710, 327683, 1, 393246, 196611, 1, 458782, 327683, 1, 524318, 196611, 1, 589854, 327683, 1, 655390, 196611, 1, 720926, 327683, 1, 786462, 196611, 1, 851998, 327683, 1, 917534, 196611, 1, 983070, 327683, 1, 1048606, 196611, 1, 1114142, 327683, 1, -393185, 131075, 1, -327649, 262147, 1, -262113, 131075, 1, -196577, 262147, 1, -131041, 131075, 1, -65505, 262147, 1, 31, 131075, 1, 65567, 262147, 1, 131103, 131075, 1, 196639, 262147, 1, 262175, 131075, 1, 327711, 262147, 1, 393247, 131075, 1, 458783, 262147, 1, 524319, 131075, 1, 589855, 262147, 1, 655391, 131075, 1, 720927, 262147, 1, 786463, 131075, 1, 851999, 262147, 1, 917535, 131075, 1, 983071, 262147, 1, 1048607, 131075, 1, 1114143, 262147, 1, -393184, 196611, 1, -327648, 327683, 1, -262112, 196611, 1, -196576, 327683, 1, -131040, 196611, 1, -65504, 327683, 1, 32, 196611, 1, 65568, 327683, 1, 131104, 196611, 1, 196640, 327683, 1, 262176, 196611, 1, 327712, 327683, 1, 393248, 196611, 1, 458784, 327683, 1, 524320, 196611, 1, 589856, 327683, 1, 655392, 196611, 1, 720928, 327683, 1, 786464, 196611, 1, 852000, 327683, 1, 917536, 196611, 1, 983072, 327683, 1, 1048608, 196611, 1, 1114144, 327683, 1, -393183, 131075, 1, -327647, 262147, 1, -262111, 131075, 1, -196575, 262147, 1, -131039, 131075, 1, -65503, 262147, 1, 33, 131075, 1, 65569, 262147, 1, 131105, 131075, 1, 196641, 262147, 1, 262177, 131075, 1, 327713, 262147, 1, 393249, 131075, 1, 458785, 262147, 1, 524321, 131075, 1, 589857, 262147, 1, 655393, 131075, 1, 720929, 262147, 1, 786465, 131075, 1, 852001, 262147, 1, 917537, 131075, 1, 983073, 262147, 1, 1048609, 131075, 1, 1114145, 262147, 1, -393182, 196611, 1, -327646, 327683, 1, -262110, 196611, 1, -196574, 327683, 1, -131038, 196611, 1, -65502, 327683, 1, 34, 196611, 1, 65570, 327683, 1, 131106, 196611, 1, 196642, 327683, 1, 262178, 196611, 1, 327714, 327683, 1, 393250, 196611, 1, 458786, 327683, 1, 524322, 196611, 1, 589858, 327683, 1, 655394, 196611, 1, 720930, 327683, 1, 786466, 196611, 1, 852002, 327683, 1, 917538, 196611, 1, 983074, 327683, 1, 1048610, 196611, 1, 1114146, 327683, 1, -393181, 131075, 1, -327645, 262147, 1, -262109, 131075, 1, -196573, 262147, 1, -131037, 131075, 1, -65501, 262147, 1, 35, 131075, 1, 65571, 262147, 1, 131107, 131075, 1, 196643, 262147, 1, 262179, 131075, 1, 327715, 262147, 1, 393251, 131075, 1, 458787, 262147, 1, 524323, 131075, 1, 589859, 262147, 1, 655395, 131075, 1, 720931, 262147, 1, 786467, 131075, 1, 852003, 262147, 1, 917539, 131075, 1, 983075, 262147, 1, 1048611, 131075, 1, 1114147, 262147, 1, -393180, 196611, 1, -327644, 327683, 1, -262108, 196611, 1, -196572, 327683, 1, -131036, 196611, 1, -65500, 327683, 1, 36, 196611, 1, 65572, 327683, 1, 131108, 196611, 1, 196644, 327683, 1, 262180, 196611, 1, 327716, 327683, 1, 393252, 196611, 1, 458788, 327683, 1, 524324, 196611, 1, 589860, 327683, 1, 655396, 196611, 1, 720932, 327683, 1, 786468, 196611, 1, 852004, 327683, 1, 917540, 196611, 1, 983076, 327683, 1, 1048612, 196611, 1, 1114148, 327683, 1, -393179, 131075, 1, -327643, 262147, 1, -262107, 131075, 1, -196571, 262147, 1, -131035, 131075, 1, -65499, 262147, 1, 37, 131075, 1, 65573, 262147, 1, 131109, 131075, 1, 196645, 262147, 1, 262181, 131075, 1, 327717, 262147, 1, 393253, 131075, 1, 458789, 262147, 1, 524325, 131075, 1, 589861, 262147, 1, 655397, 131075, 1, 720933, 262147, 1, 786469, 131075, 1, 852005, 262147, 1, 917541, 131075, 1, 983077, 262147, 1, 1048613, 131075, 1, 1114149, 262147, 1, -393178, 196611, 1, -327642, 327683, 1, -262106, 196611, 1, -196570, 327683, 1, -131034, 196611, 1, -65498, 327683, 1, 38, 196611, 1, 65574, 327683, 1, 131110, 196611, 1, 196646, 327683, 1, 262182, 196611, 1, 327718, 327683, 1, 393254, 196611, 1, 458790, 327683, 1, 524326, 196611, 1, 589862, 327683, 1, 655398, 196611, 1, 720934, 327683, 1, 786470, 196611, 1, 852006, 327683, 1, 917542, 196611, 1, 983078, 327683, 1, 1048614, 196611, 1, 1114150, 327683, 1, -393177, 131075, 1, -327641, 262147, 1, -262105, 131075, 1, -196569, 262147, 1, -131033, 131075, 1, -65497, 262147, 1, 39, 131075, 1, 65575, 262147, 1, 131111, 131075, 1, 196647, 262147, 1, 262183, 131075, 1, 327719, 262147, 1, 393255, 131075, 1, 458791, 262147, 1, 524327, 131075, 1, 589863, 262147, 1, 655399, 131075, 1, 720935, 262147, 1, 786471, 131075, 1, 852007, 262147, 1, 917543, 131075, 1, 983079, 262147, 1, 1048615, 131075, 1, 1114151, 262147, 1, -393176, 196611, 1, -327640, 327683, 1, -262104, 196611, 1, -196568, 327683, 1, -131032, 196611, 1, -65496, 327683, 1, 40, 196611, 1, 65576, 327683, 1, 131112, 196611, 1, 196648, 327683, 1, 262184, 196611, 1, 327720, 327683, 1, 393256, 196611, 1, 458792, 327683, 1, 524328, 196611, 1, 589864, 327683, 1, 655400, 196611, 1, 720936, 327683, 1, 786472, 196611, 1, 852008, 327683, 1, 917544, 196611, 1, 983080, 327683, 1, 1048616, 196611, 1, 1114152, 327683, 1, -393175, 131075, 1, -327639, 262147, 1, -262103, 131075, 1, -196567, 262147, 1, -131031, 131075, 1, -65495, 262147, 1, 41, 131075, 1, 65577, 262147, 1, 131113, 131075, 1, 196649, 262147, 1, 262185, 131075, 1, 327721, 262147, 1, 393257, 131075, 1, 458793, 262147, 1, 524329, 131075, 1, 589865, 262147, 1, 655401, 131075, 1, 720937, 262147, 1, 786473, 131075, 1, 852009, 262147, 1, 917545, 131075, 1, 983081, 262147, 1, 1048617, 131075, 1, 1114153, 262147, 1, -393174, 196611, 1, -327638, 327683, 1, -262102, 196611, 1, -196566, 327683, 1, -131030, 196611, 1, -65494, 327683, 1, 42, 196611, 1, 65578, 327683, 1, 131114, 196611, 1, 196650, 327683, 1, 262186, 196611, 1, 327722, 327683, 1, 393258, 196611, 1, 458794, 327683, 1, 524330, 196611, 1, 589866, 327683, 1, 655402, 196611, 1, 720938, 327683, 1, 786474, 196611, 1, 852010, 327683, 1, 917546, 196611, 1, 983082, 327683, 1, 1048618, 196611, 1, 1114154, 327683, 1)
layer_1/name = "walls"
layer_1/tile_data = PackedInt32Array(1, 458755, 0, 65537, 65539, 0, 131073, 65539, 0, 196609, 65539, 0, 262145, 65539, 0, 327681, 65539, 0, 393217, 65539, 0, 458753, 327683, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 393231, 3, 0, 65551, 3, 0, 17, 3, 0, 458769, 3, 0, 18, 3, 0, 458770, 3, 0, 19, 3, 0, 458771, 3, 0, 20, 3, 0, 458772, 3, 0, 21, 3, 0, 458773, 3, 0, 22, 3, 0, 458774, 3, 0, 23, 3, 0, 458775, 3, 0, 24, 3, 0, 458776, 3, 0, 25, 3, 0, 458777, 3, 0, 26, 3, 0, 458778, 3, 0, 27, 3, 0, 458779, 3, 0, 28, 3, 0, 458780, 3, 0, 29, 3, 0, 458781, 3, 0, 30, 393219, 0, 458782, 262147, 0, 65566, 65539, 0, 131102, 65539, 0, 196638, 65539, 0, 262174, 65539, 0, 327710, 65539, 0, 393246, 65539, 0, 16, 851971, 0, 14, 786435, 0, 458766, 983043, 0, 458768, 917507, 0, 65552, 983043, 0, 65550, 917507, 0, 393232, 786435, 0, 393230, 851971, 0)

[node name="Zones" type="Node2D" parent="Level"]

[node name="StartZone" parent="Level/Zones" instance=ExtResource("2_kq1xc")]
position = Vector2(79, 64)

[node name="FinishZone" parent="Level/Zones" instance=ExtResource("3_588w7")]
position = Vector2(430, 64)

[node name="Camera" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_q81i7")]
player = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("5_fkiyw")]
position = Vector2(79, 64)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("6_4kgnc")

[node name="Health" type="TileMap" parent="HUD"]
position = Vector2(41, 137)
tile_set = ExtResource("1_r7827")
format = 2
layer_0/tile_data = PackedInt32Array(0, 262147, 11, 1, 327683, 11, 2, 393219, 11)

[node name="Avatar" type="TileMap" parent="HUD"]
tile_set = ExtResource("1_r7827")
format = 2
layer_0/tile_data = PackedInt32Array(458752, 65539, 9, 524288, 65539, 10, 589824, 65539, 11, 458753, 131075, 9, 524289, 131075, 10, 589825, 131075, 11, 458754, 196611, 9, 524290, 196611, 10, 589826, 196611, 11)

[node name="DiedMenu" parent="HUD" instance=ExtResource("7_nl2bs")]
visible = false

[node name="FinishedMenu" parent="HUD" instance=ExtResource("8_pdgei")]
visible = false
script = ExtResource("9_yjko5")

[connection signal="collided_wall" from="Player" to="Camera" method="on_player_collided_wall"]
[connection signal="died" from="Player" to="HUD" method="on_player_died"]
[connection signal="finished" from="Player" to="HUD" method="on_player_finished"]
[connection signal="health_changed" from="Player" to="HUD" method="on_player_health_changed"]
